# desk-switch

./: .gitignore  Cargo.toml  Install.bat  Install.command  InstallVDD.bat  README.md  start_mac.command  start_windows.bat
helpers/: virtual-display-helper.m
src/: capture.rs  config.rs  discovery.rs  gui.rs  input.rs  main.rs  protocol.rs  service.rs  viewer.rs
src/platform/: macos.rs  mod.rs  windows.rs
src/virtual_display/: macos.rs  mod.rs  windows.rs
