[package]
name = "desk-switch"
version = "0.1.0"
edition = "2021"
description = "Cross-platform KVM switch system for multi-laptop setups"

[dependencies]
# Screen capture
scrap = "0.5"

# Image encoding/decoding
image = { version = "0.25", default-features = false, features = ["jpeg"] }

# Windowing / viewer (CLI mode)
minifb = "0.28"

# GUI framework (glow/OpenGL for broad GPU compatibility)
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "glow"] }

# Input capture + simulation
rdev = "0.5"
enigo = { version = "0.3", features = ["serde"] }

# Async runtime + networking
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Platform directories
dirs = "6"

# Logging
log = "0.4"
env_logger = "0.11"

# Channels for threading pipeline
crossbeam-channel = "0.5"

# Crypto for auth
sha2 = "0.10"
rand = "0.8"
hex = "0.4"

# Misc
anyhow = "1"
ctrlc = "3"
hostname = "0.4"
